# DMusicPakCPP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build.ps1  build.sh
cmake/: DMusicPakConfig.cmake.in
docs/: FORMAT_SPEC.md
examples/: CMakeLists.txt  example_network.cpp  example_read.cpp  example_stream.cpp  example_write.cpp
include/dmusicpak/: dmusicpak.h  dmusicpak_c.h
src/: dmusicpak.cpp  dmusicpak.rc.in  dmusicpak_c.cpp  internal.h  io.cpp  network.cpp
